[tool.poetry]
name = "todofastapi"
version = "0.1.0"
description = ""
authors = ["Miguel Monzó <miguel.monzo@tecsidel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
